edit styles3.css file

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar background">
     <form action="" method="GET" class="search-form">
-        <input type="text" name="q" placeholder="Search task" value=" {{ request.GET.q }} ">
+        <input type="text" name="q" placeholder="Search task" value="">
         <input type="submit">
     </form>
 </nav>
