edit index file

--- a/index.html
+++ b/index.html
@@ -9,15 +9,31 @@
 <body>
 <h1>Lab1</h1>
 <form action="#" method="post">
-    <h2>Sign Up</h2>
-    <p>
-        <label for="Email" class="floatLabel">Email</label>
-        <input id="Email" name="Email" type="text">
-    </p>
-    <p>
-        <label for="password" class="floatLabel">Password</label>
-        <input id="password" name="password" type="password">
-    </p>
+    <div>
+        <h1>Sigh in here</h1>
+    </div>
+    <form>
+        <div>
+            <label for="fname">First name:</label>
+            <input type="text" id="fname">
+        </div>
+        <div>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname">
+        </div>
+        <div>
+            <label for="age">Age:</label>
+            <input type="text" id="age">
+        </div>
+        <div>
+            <label for="email">Email:</label>
+            <input type="text" id="email">
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="text" id="password">
+        </div>
+    </form>
     <p>
         <style>
             .button {
