--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="styles3.css">
 <html>
 <head>
     <title>
         Rating of students
     </title>
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
 <nav class="navbar background">
@@ -23,7 +23,7 @@
             <p class="text-small">
                 Below is a list of first-year students 2021-2022 of Computer Science course
             </p>
-            <a href="first_year.html" class="btn btn-info" role="button">Continue</a>
+            <a href="first_year.html"><button>Continue</button></a>
         </div>
     </div>
 </section>
@@ -37,7 +37,7 @@
             <p class="text-small">
                 Below is a list of second-year students 2021-2022 of Computer Science course
             </p>
-            <a href="second_year.html" class="btn btn-info" role="button">Continue</a>
+            <a href="second_year.html"><button>Continue</button></a>
         </div>
     </div>
 </section>
@@ -48,7 +48,7 @@
         <p class="sectionSubTag text-small">
             Below is a list of third-year students 2021-2022 of Computer Science course
         </p>
-        <a href="third_year.html" class="btn btn-info" role="button">Continue</a>
+        <a href="third_year.html"><button>Continue</button></a>
     </div>
 </section>
 </body>
