--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Lab1</h1>
 <form action="#" method="post">
     <div>
         <h1>Sigh in here</h1>
@@ -34,23 +34,9 @@
             <input type="text" id="password">
         </div>
     </form>
-    <p>
-        <style>
-            .button {
-                background-color: #970395;
-                border: none;
-                color: white;
-                padding: 15px 32px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 16px;
-                margin: 4px 2px;
-                cursor: pointer;
-            }
-        </style>
-             <a href="index2.html" class="btn btn-info" role="button">Continue</a>
-    </p>
+    <div>
+       <a href="index2.html"><button>Continue</button></a>
+    </div>
 </form>
 </body>
 </html>
