--- a/second_year.html
+++ b/second_year.html
@@ -1,12 +1,12 @@
+<!DOCTYPE html>
 Second-year students 2021-2022
-<link rel="stylesheet" href="styles2.css">
-
 <span class="heading">User Rating</span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star"></span>
+<link rel="stylesheet" href="styles2.css">
 <p>3.9 average score based on 120 students</p>
 <hr style="border:3px solid #ee1010">
 
