--- a/third_year.html
+++ b/third_year.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="styles2.css">
-
+<!DOCTYPE html>
 <span class="heading">User Rating</span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star"></span>
+<link rel="stylesheet" href="styles2.css">
 <p>3.9 average score based on 90 students</p>
 <hr style="border:3px solid #7d04f6">
 
